add openssh bib entry

--- a/hpcsyspros19.bib
+++ b/hpcsyspros19.bib
@@ -57,10 +57,20 @@
    url = {https://en.wikipedia.org/wiki/Google_Authenticator},
  }
 
- @misc{linotp,
-   author = {KeyIdentity GmbH},
-   title = {{LinOTP}},
-   year = {2019},
-   url = {https://www.linotp.org/}
-   }
+@misc{linotp,
+ author = {KeyIdentity GmbH},
+ title = {{LinOTP}},
+ year = {2019},
+ url = {https://www.linotp.org/}
+ }
+
+@misc{openssh
+ author = {OpenSSH},
+ title = {{OpenSSH 3.9 Release Notes}},
+ year = {2004},
+ month = {08},
+ day = {18},
+ url = {https://www.openssh.com/txt/release-3.9}
+
+}
 
