add communications appendix
added emails from VIPs and more detailed information about communications in appendix

--- a/hpcsyspros19.tex
+++ b/hpcsyspros19.tex
@@ -496,6 +496,69 @@ enable scientific computing workflows.
 
 \appendix
 
-\section{Email Text Sent to Users}
+\section{Communications to Users about MFA}
+NERSC used many different avenues of communication to reach out to users about the upcoming transition to MFA. In this 
+appendix we detail some of those communications.
 
+\subsection{Email Communications}
+
+NERSC launched an aggressive communications campaign over email to encourage users to adopt MFA. Regular communication about MFA was included in the NERSC weekly email.
+NERSC user engagement staff also enlisted the help of upper management in communicating the importance of the transition to MFA. Staff wrote memos that leadership adapted to their writing style and sent to users.
+
+\subsubsection{Email from NERSC Director}
+{\em NERSC director Sudip Dosanjh kicked off the MFA campaign on August 26, 2018 with this email to users letting them know
+that MFA would become mandatory in the new allocation year.}
+
+Dear NERSC Users, 
+
+I’m writing to communicate an upcoming change in how user accounts will be authenticated at NERSC. As you may know, NERSC currently supports multi-factor authentication (MFA) for user accounts on a voluntary basis. Starting in the 2019 allocation year, NERSC will require MFA for accessing NERSC systems in the majority of cases.  To prepare for this change, we encourage you to start testing MFA now (see this help page to see how to use MFA).
+
+I have authorized this policy change to protect the integrity of your data, accounts, and allocations and to align NERSC with best practices in HPC and the online world in general.  MFA provides greater protection against phishing and other modern threats to your digital security.  NERSC makes security largely transparent to users, but we need your help to ensure there is not unauthorized access to your account and data.
+
+NERSC experts have been working hard to implement MFA in ways that minimally impacts how you work at NERSC. For example, we’ve created technologies that allow you to authenticate with MFA only once per day as well as incorporate  MFA into automated workflows.  The policy also allows for longer periods of single sign-on access, or opting-out of MFA where reasonably justified. You can read more about how this works here.
+
+In the next few weeks you will receive communications from our Security and User Engagement staff with pointers to additional information about transitioning to MFA across all NERSC resources. I encourage you to pay attention to these communications and try MFA well before the new allocation year begins. And of course, NERSC staff are always happy to answer any questions or help troubleshoot issues at https://help.nersc.gov .
+
+Thanks for your help as we build a more secure infrastructure for you!
+
+Best regards,
+
+Sudip
+
+\subsubsection{HPC Department Head email}
+
+\em{HPC Department Head Richard Gerber sent the following message to users on October 30.}
+
+Dear NERSC users,
+
+I’m writing to encourage you to start using Multi-Factor Authentication (MFA) on your NERSC account now, ahead of January 8, 2019 when MFA will be required for most accounts. MFA helps protect your account and your data from unauthorized access and also enhances the security environment on NERSC systems for everybody. 
+
+MFA is pretty easy to set up and use as documented on the NERSC MFA web page. I was able to enable it quickly for my account and then I used NERSC’s innovative sshproxy service that allows me to enter my token only once per day. This works great for interactive SSH connections, but if your workflow involves other ways of accessing NERSC you may need to make additional changes. We believe we have solutions for most use cases, but we want to work with you now to make sure you’re set before January. Please contact us with your questions via help.nersc.gov. 
+
+Please consider joining the NERSC User Group webinar this Thursday at 11 a.m. Pacific Time. The meeting will will include a presentation on how to use MFA at NERSC.  
+
+Thank you for your assistance in helping keep your data and NERSC secure.
+
+
+Regards,
+
+Richard Gerber
+
+\subsubsection{Email from Data Department Head}
+pending approval
+
+\subsection{Outreach through the NERSC User Group}
+
+The NERSC User Group (NUG) monthly webinar was another venue where we exposed users to MFA.
+The September 20, 2018 webinar included a discussion of NERSC's plans for the new allocation year and how to use sshproxy. (URL: https://www.nersc.gov/assets/Uploads/NUG-Webinar-20180920.pdf)
+The November 1, 2018 webinar drew more participants than usual because it was also the announcement of NERSC's new Perlmutter system, so we took advantage of the extra attention to also include a section about using MFA for web and ssh clients (including using sshproxy). (URL: https://www.nersc.gov/assets/Uploads/2018-11-01-NUG-MFA-Presentation.pdf)
+
+\subsection{``NERSC User News'' Podcasts}
+
+The weekly ``NERSC User News'' podcast (URL: https://anchor.fm/nersc-news) featured three episodes with NERSC security engineer Abe Singer:
+\begin{itemize}
+\item  MFA (May 2018) An overview of what MFA is and what we're doing at NERSC (URL: https://anchor.fm/nersc-news/episodes/MFA--Abe-Singer-Interview-e1fied/a-a3g5ba)
+\item  Latest MFA Developments (September 2018) Introducing sshproxy and answering common user questions about MFA (URL: https://anchor.fm/nersc-news/episodes/Latest-MFA-Developments-at-NERSC--Abe-Singer-Interview-e288uq)
+\item  Multi-Factor Authentication at NERSC (November 2018) Plans for further MFA developments and what happens in the new allocation year when MFA becomes mandatory (URL: https://anchor.fm/nersc-news/episodes/Multi-Factor-Authentication-at-NERSC--Abe-Singer-Interview-e2kmad)
+\end{itemize}
 \end{document}
