Add ref and fix it

--- a/hpcsyspros19.bib
+++ b/hpcsyspros19.bib
@@ -64,7 +64,7 @@
  url = {https://www.linotp.org/}
  }
 
-@misc{openssh
+@misc{openssh,
  author = {OpenSSH},
  title = {{OpenSSH 3.9 Release Notes}},
  year = {2004},
