add news center pubs blurb

--- a/hpcsyspros19.tex
+++ b/hpcsyspros19.tex
@@ -581,7 +581,7 @@ Perhaps, like me, you’ve put off enabling Multi-Factor Authentication (MFA) fo
 
 To provide some hard data to the NERSC user community I timed myself while setting it up.  I’m not super fast at these things and even including a few urgent Slack messages and an inbound photo text of my cute nieces, I still managed to set up MFA in 13 minutes.  I wanted to set up sshproxy keys so I would only have to enter my one-time-password one time per day, and I managed to get that enabled in an additional 7 minutes.  
 
-If you'd like to have some help, the NERSC consultants will be holding MFA "office hours"  each week through January 8 (excepting the holidays).  During those times you can join a zoom session where several people will be available in real-time to help you get set up. The dates for the office hours are December 17th, January 4, and January 7, 8, and 9. For more information on office hours please see \url{https://www.nersc.gov/users/announcements/featured-announcements/mfa-office-hours-in-december-and-january/}
+If you'd like to have some help, the NERSC consultants will be holding MFA ``office hours'' each week through January 8 (excepting the holidays).  During those times you can join a zoom session where several people will be available in real-time to help you get set up. The dates for the office hours are December 17th, January 4, and January 7, 8, and 9. For more information on office hours please see \url{https://www.nersc.gov/users/announcements/featured-announcements/mfa-office-hours-in-december-and-january/}
 
 On January 8th, if you have not enabled MFA, you will not be able to login into NERSC resources until you log into NIM and set up at least one MFA token.  
 
@@ -616,4 +616,21 @@ security engineer Abe Singer:
 \item  Latest MFA Developments (September 2018) Introducing sshproxy and answering common user questions about MFA (URL: \url{https://anchor.fm/nersc-news/episodes/Latest-MFA-Developments-at-NERSC--Abe-Singer-Interview-e288uq})
 \item  Multi-Factor Authentication at NERSC (November 2018) Plans for further MFA developments and what happens in the new allocation year when MFA becomes mandatory (URL: \url{https://anchor.fm/nersc-news/episodes/Multi-Factor-Authentication-at-NERSC--Abe-Singer-Interview-e2kmad})
 \end{itemize}
+
+\subsection{NERSC Center News Publications}
+
+In December 2018 and January 2019, NERSC interviewed two users about their
+experiences incorporating MFA into their workflows. The December 2018
+posting featured a testimonial from a user who voluntarily enrolled in MFA
+at NERSC before it was made mandatory
+(URL: \url{https://www.nersc.gov/news-publications/nersc-news/nersc-center-news/2018/nersc-users-begin-implementing-mfa-for-higher-security-access-to-cori/})
+and how their use of the sshproxy service made the MFA transition minimally
+disruptive. The post from January 2019
+(URL: \url{https://www.nersc.gov/news-publications/nersc-news/nersc-center-news/2019/nersc-adds-new-layer-of-security-with-mfa-authentication/})
+discusses a data analysis workflow and how introducing MFA did not interrupt
+the process. The two users interviewed have different workflows but were both
+able to successfully incorporate MFA into their scientific processes; the
+publications were intended to demonstrate to the larger user community the
+ease of use of MFA.
+
 \end{document}
