--- a/hpcsyspros19.tex
+++ b/hpcsyspros19.tex
@@ -317,7 +317,7 @@ with the password plus one-time password, but are unaware that only the password
 is being checked.  The prompt and user action is the same during the failure event.
 This is advantageous for the user as they do not need to change their behavior.
 The OTPProxy service is not currently openly released since it is fairly specialized
-to our enviornment, but can be opened if there is interest.
+to our environment, but can be opened if there is interest.
 
 \begin{figure*}[h!]
   \centering
@@ -569,7 +569,7 @@ Thank you for your assistance in helping keep your data and NERSC secure.
 
 Regards,
 
-Richard Gerber
+Richd Gerber
 
 \subsubsection{Email from Data Department Head}
 {\em Data Department Head Katie Antypas sent the following note to NERSC users
@@ -614,7 +614,7 @@ security engineer Abe Singer:
 \begin{itemize}
 \item  MFA (May 2018) An overview of what MFA is and what we're doing at NERSC (URL: \url{https://anchor.fm/nersc-news/episodes/MFA--Abe-Singer-Interview-e1fied/a-a3g5ba})
 \item  Latest MFA Developments (September 2018) Introducing sshproxy and answering common user questions about MFA (URL: \url{https://anchor.fm/nersc-news/episodes/Latest-MFA-Developments-at-NERSC--Abe-Singer-Interview-e288uq})
-\item  Multi-Factor Authentication at NERSC (November 2018) Plans for further MFA developments and what happens in the new allocation year when MFA becomes mandatory (URL: \url{https://anchor.fm/nersc-news/episodes/Multi-Factor-Authentication-at-NERSC--Abe-Singer-Interview-e2kmad})
+\item  Multi-Factor Authentication at NERSC (November 2018) Plans for further MFA developments and what happens in the new allocation year when MFA becomes mandatory (URL: \url{https://anchor.fm/nersc-news/episodes/Multi-Factor-Authentication-at-NERSC--Aber-Interview-e2kmad})
 \end{itemize}
 
 \subsection{NERSC Center News Publications}
